completed responsoveness of pages

--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,14 @@
   src: url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 }
 
-
 @theme {
   --breakpoint-mySM: 480px;
   --breakpoint-myMD: 760px;
   --breakpoint-myLg: 992px;
+}
+
+@layer base {
+  html {
+    scroll-behavior: smooth;
+  }
 }
